Fix algorithm for change order statuses
